# ChangeLog for www-apps/mediawiki
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.185 2012/04/26 19:24:02 radhermit Exp $

*mediawiki-1.19.0_rc1 (26 Apr 2012)

  26 Apr 2012; Tim Harder <radhermit@gentoo.org> +mediawiki-1.19.0_rc1.ebuild:
  Version bump.

*mediawiki-1.18.3 (26 Apr 2012)

  26 Apr 2012; Tim Harder <radhermit@gentoo.org> +mediawiki-1.18.3.ebuild:
  Version bump.

  27 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> mediawiki-1.18.2.ebuild:
  x86 stable wrt bug #409513

  25 Mar 2012; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.18.2.ebuild:
  Stable for amd64, wrt bug #409513

  23 Mar 2012; Tim Harder <radhermit@gentoo.org>
  -files/postinstall-1.13-en.txt, -mediawiki-1.16.5.ebuild, metadata.xml:
  Remove old.

*mediawiki-1.19.0_beta2 (23 Mar 2012)

  23 Mar 2012; Tim Harder <radhermit@gentoo.org>
  +mediawiki-1.19.0_beta2.ebuild:
  Version bump.

*mediawiki-1.18.2 (23 Mar 2012)

  23 Mar 2012; Tim Harder <radhermit@gentoo.org> +mediawiki-1.18.2.ebuild:
  Version bump.

*mediawiki-1.19.0_beta1 (09 Mar 2012)

  09 Mar 2012; Tim Harder <radhermit@gentoo.org>
  +mediawiki-1.19.0_beta1.ebuild:
  Version bump.

  26 Feb 2012; Tim Harder <radhermit@gentoo.org> mediawiki-1.18.1.ebuild,
  +files/postinstall-1.18-en.txt:
  Update post install instructions (fixes bugs #405573 and #405575), update php
  dependencies (fixes bug #401335), and remove depend.php eclass usage.

  01 Feb 2012; Brent Baude <ranger@gentoo.org> mediawiki-1.18.1.ebuild:
  Marking mediawiki-1.18.1 ppc for bug 398687

  28 Jan 2012; Raúl Porcel <armin76@gentoo.org> mediawiki-1.16.5.ebuild,
  mediawiki-1.18.1.ebuild:
  Drop sparc keywords

  20 Jan 2012; Thomas Kahle <tomka@gentoo.org> mediawiki-1.18.1.ebuild:
  x86 stable per bug 398687

  15 Jan 2012; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.18.1.ebuild:
  Stable for AMD64, wrt security bug #398687
