@@ -6,25 +6,21 @@ AUX postupgrade-1.16-en.txt 1512 RMD160 362daf6f25f8a1497209426751aedd4cf78796c7
 DIST mediawiki-1.18.1.tar.gz 17271798 RMD160 066871f63d38120ba0985f5168351a6a66a45758 SHA1 1c433523a5ae2835e97462053e08ad7c01e178d2 SHA256 d9db16b4f18bc43984f323ad90f724ee5ffa52e1f21e6c453bc8d4b1210e1a34
 DIST mediawiki-1.18.2.tar.gz 17320421 RMD160 2ad278236d0b636489ddd0ee0774d346135f5009 SHA1 edaf86104f7542a08d6ce39473cdef6a5b01fca4 SHA256 82228bb85f4ae0cfaa5e2b1b5be57601d86e5bfe2f3d397a6bd0c2d3021cccef
 DIST mediawiki-1.18.3.tar.gz 17376442 RMD160 71a22e4f016459a0a1f215b1699e3ded1df3ccb3 SHA1 e524e08e24a0129e59dc41ef482df5705481c5f9 SHA256 4319f37282ad64ddfca53ecae76da787630f1cd0e5ad438d028551fb1742eb39
-DIST mediawiki-1.19.0beta1.tar.gz 17903674 RMD160 0040bfb514d293e6898154617b9c78f5d7c4c3cf SHA1 b27da95759f8347ade92554162a4aaa8761ae953 SHA256 0779a8440f86f147dfdb4134139143feac5e851d5bb88cab5c270efb230900b8
-DIST mediawiki-1.19.0beta2.tar.gz 17914172 RMD160 c6b436598928d1d6742e678902992ebe9121087f SHA1 1ee6ed0c863cdf7c5aa2a8c2de13600045bc7823 SHA256 64fbe2905131920a77010546b40bff28ea97bda02523c0740e88130bfd268dec
 DIST mediawiki-1.19.0rc1.tar.gz 17896494 RMD160 070bb3e203d7f305c9e713f734d3c573251c410b SHA1 4757bc23b5fa2e8e2088484e44a1d1ec0ed56932 SHA256 a3d86409156af4966df872c82ef02f60db6ef1538faf19a5404ac2a3479de1b7
 EBUILD mediawiki-1.18.1.ebuild 2538 RMD160 31e451701e2dd70f8cc7d99ba2ac88e69642ba0a SHA1 15083e35527b4dc5db60fbc89dd985a5dddeecd6 SHA256 f91ecb3f4ba5ec78fb3f961719d2b32a99b15915c7cb4f748543766a362863d2
 EBUILD mediawiki-1.18.2.ebuild 2540 RMD160 6f89e14accbccfdfb0374b7352f747cad8e72eba SHA1 c15c16675e7e7236e01dcb58f080224eae891078 SHA256 1835206edda8cb913cf0b219283af1b53c1168ec81bb69419794ffac61059a41
 EBUILD mediawiki-1.18.3.ebuild 2534 RMD160 ea2450e4b0d7fc984eb4ffa48a08f83dee018a7d SHA1 58f2f47d8ef5e854c2086c61035c91eca5399c9f SHA256 c19d6b75fed5a71c895c2ca8a004fdb56362539f1a7ff8f4942e3bce0bc9043e
-EBUILD mediawiki-1.19.0_beta1.ebuild 2583 RMD160 c458a625372de2e79b8f88a0fdbe835717894e8f SHA1 c7b6c1877553e0f4404bab9d8e1d80f4eb860834 SHA256 39d315dee21ec9379f7865938f211929cff80d9594e3f1a10c714b1bc6c1ad54
-EBUILD mediawiki-1.19.0_beta2.ebuild 2583 RMD160 331dd26e32c16c9a44fc7c7ca345b6388fd8bf23 SHA1 61ebd514aa8024f29d4cd7a893057446d5c10d8e SHA256 72cf32756a96dd400ac72222b71362e932992384c0ebd15f8bca7de28ac7ef7c
 EBUILD mediawiki-1.19.0_rc1.ebuild 2581 RMD160 1b1bc6eb837d71ff6147d9215d21c467637abb90 SHA1 2e8becd92c0a940b95ee37cedb2e3d293233c702 SHA256 d2e5b23f216d716be26ae7f82bc9bafef9d4ebc714a1c289e13cb7a8abdffae6
-MISC ChangeLog 30908 RMD160 0f46e5ff0a6be0a2b73b16688a350262e543a964 SHA1 1045dfb6d3b8b581ab5d87fd2c2dac9fe3b3bfb6 SHA256 07305ffdea3a427499b8f14f71bd7605236a36a874a9b183de59c49ca4aa9f60
+MISC ChangeLog 31038 RMD160 fe0461dd8ac5fa8c5cdb407c1f1592c946b1ffac SHA1 31a46ae2ce3628271fceff5a69b6b4f88c778808 SHA256 343717f7236b9cb12dfa87b5564cbb14f6b8239cc9a8b361aae9e605b34ac3aa
 MISC metadata.xml 226 RMD160 80af5ae79d45bccff97425edf6ac2c3eb33d2dfc SHA1 bf1f9ae55677b0df0cf5d5548d00994c7161237e SHA256 facc70bcd9db210eaf1ac62a49df1927509d68b2cbbafb34c08e3bd689a27955
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPmaDXAAoJEEqz6FtPBkyj+u4H/1ZhpRyvm36ZfHr7VJ2vSzm3
-sDhvPscSE6gwx0eCSchdoAqaLgWyOmQi/lj1lXe/cRYS59Ogk62kPVCvNPz2tQsC
-bCG84qV5n2LWF98miwlPONVWqgya8vIezI5nZHHC9/KrIgZhfmODWOpn0oPrNzab
-5s9JtQIadjpR5RxPsjEhaQRswgicGsMYZuoXfiBqu9SrcpcwYq+DTXvM4qLfVOyo
-AA93yt/owfK2YtQZwtyC9sM3BLb98gDwcTIVP+MKeED3OFOVtjMHVnVWlvWXTKQq
-s4oBcLfC8wTDRmhVjYfzMEeXD2ImgimRoKa2zprfoaUenYHwXahhtR5Dhpf1zwY=
-=2GuD
+iQEcBAEBCgAGBQJPmaEEAAoJEEqz6FtPBkyj0ZMH/jB2f42/LXtPHvdJXrVHZ/B8
+/UYKCYAko8f00zfW7y7zcZY15W+mYO1JXKCyHcEMlvcLSKXudZB/OaAtNVA6dzYY
+A4xzqkiJKAf3iQFNoafVtBc424iJLIPZYtoHScU12w5xyT0XL5vgD6xZBSdTpvJ5
+jDLZMV4awl9IivuRZXcp4iar4MKAWc9NlwPwtfcXAhGeWOiB5ZsWzsNlTCs+fMXS
+RXKqfPZyb4lfklQT1p36lC70qs3l1MvMCP3bJeOuBb+xN7D+HfBmsDEsCMioazWq
+kL+06iDeTUyTPnjtjnfTSSbHQJJBNnJZ7FKa8zj2AMWnmX/rrLz4HrFZTFngFpI=
+=HcP6
 -----END PGP SIGNATURE-----
