@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/mediawiki
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.185 2012/04/26 19:24:02 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.186 2012/04/26 19:24:46 radhermit Exp $
+
+  26 Apr 2012; Tim Harder <radhermit@gentoo.org>
+  -mediawiki-1.19.0_beta1.ebuild, -mediawiki-1.19.0_beta2.ebuild:
+  Remove old.
 
 *mediawiki-1.19.0_rc1 (26 Apr 2012)
 
